--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,4 +6,4 @@ ADD . /app/
 RUN pip install -r requirements.txt
 
 EXPOSE 5000
-CMD ["python", "/var/lib/jenkins/workspace/basic-python-job/app/main.py"]
+CMD ["python3", "app/main.py"]
